@@ -1,3 +1,11 @@
+2004-07-20  Per Bothner  <per@bothner.com>
+
+	* IsEqv.java:  Remove unused import statements.
+	* MultiplyOp.java:  Likewise.:  Likewise.
+	* ObjectFormat.java:  Likewise.:  Likewise.
+	* ParseFormat.java:  Likewise.:  Likewise.
+	* MakeList.java:  Use static syntax to access static fields.
+
 2004-05-28  Per Bothner  <per@bothner.com>
 
 	* ObjectFormat.java (format):  Check for missing argument.
